syntax = "proto3";

import "google/protobuf/wrappers.proto";



message WriteFileRequestData {
	string folder = 1;
  	string filename = 2;
    google.protobuf.BytesValue file_data = 3;
}

message WriteFileResponseData {
	//El nameNode decide el dataNode y genera la comunicaci√≥n
	string file_id = 1;
	repeated string data_node_addresses = 2;
}

message ReadFileRequestData{
	string file_name = 1;
}
message ReadFileResponseData{
	bytes file_data = 1;
}

service DataNodeService{
	rpc WriteFile(WriteFileRequestData) returns (WriteFileResponseData);
	rpc ReadFile(ReadFileRequestData) returns (ReadFileResponseData);
}